--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     // Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.0.0'
-
+    implementation 'com.google.code.gson:gson:2.6.2'
     testImplementation 'junit:junit:4.12'
 
 
